<resources>
    <string name="app_name">LayoutProject</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="forget">Forget password?</string>
    <string name="login">Login</string>
    <string name="connect">or connect with</string>
    <string name="emil">Sign Up with E-mail</string>
    <string name="facebook_logo">facebook_logo</string>
    <string name="twitter_logo">twitter_logo</string>
    <string name="logo_of_aware">logo of aware</string>
</resources>